Changes for 1.4:

 - fixed discovery crashes (Eugene)
 - fixed trigger description substitution for messages (Eugene)
 - fixed SQL schema for housekeeper (Eugene)
 - added delta value calculation for UINT64 (Eugene)
 - fixed log messages for auditlog (Eugene)
 - added ZABBIX Server to a host group (Alexei)
 - fixed default group for Admin/guest. (Alexei)
 - icmpping will be processed regardless of host availability (Alexei)
 - do not update trigger statuses to unknown for trapper items (Alexei)
 - fixed processing of {TRIGGER.VALUE} and {STATUS} (Alexei)
 - fixed displaying of special chars in trigger description (Alexei)
 - restored validation for hostname (Eugene)
 - splitted error message for trigger validation (Eugene)
 - fixed hitory severity (Eugene)
 - fixed user information displayed (Eugene)
 - fixed logfiles monitoring (Eugene)
 - fixed WEB monitoring (Eugene)
 - fixed SNMP discovery (Alexei)
 - documented use of -vv for zabbix_sender (Alexei)
 - fixed "plain text" and "history of actions" for screens (Eugene)

Changes for 1.3.8:

 - increased server side key length up to 256 (Eugene)
 - fixed active check communication (Eugene)
 - fixed eventlog (Eugene)
 - same step color for both graphs in Monitoring->WEB (Alexei)
 - support of more flexible trigger function count(period,value) (Alexei)
 - finished WEB monitoring (Eugene)
 - changed type of httptest.lastfailedstep to integer (Alexei)
 - added check for a list of status codes for WEB monitoring (Alexei)
 - added acknowledge management for overview screen (Eugene)
 - added default groups for users 'guest' and 'Admin' (Alexei)
 - added http status code configuration for web monitoring (Eugene)
 - new column httpstep.status_codes (Alexei)
 - set DENY permission as default for ZABBIX users (Eugene)
 - fixed Error in "Cancel" after ack of a trigger (Eugene)
 - fixed index.php looping on db connection failing (Eugene)
 - button "Update" renamed to "Refresh" in data export (Alexei)